z-index is no longer required

--- a/pull-to-refresh.css
+++ b/pull-to-refresh.css
@@ -30,8 +30,6 @@
     top: -60px;
 
     font-size: 0.85em;
-
-    z-index: -1;
     
     -webkit-transform: translateY(0);
        -moz-transform: translateY(0);
